Change response variables to private, and handle missing arrays cases